# amazon-purchase-prep-assistant

./: .env.example  .gitignore  CODEX.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: amazon_business_api_research.md  architecture.md  browser_exploration_policy.md  gpt_image_2_visual_guide.md  setup.md
sample_data/: manual_flow_patterns.json  purchase_plan.json
src/purchase_prep_assistant/: __init__.py  api.py  business_api.py  business_payloads.py  cli.py  exporters.py  models.py  parsers.py  safety.py
tests/: test_api.py  test_business_api.py  test_business_payloads.py  test_exporters.py  test_parsers.py  test_safety.py
