[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purchase-prep-assistant"
version = "0.2.0"
description = "Amazon Business purchase automation preparation and official API payload assistant"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "GitHub-GPT Developer"}]
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "openpyxl>=3.1.5",
    "pydantic>=2.7.0",
    "rich>=13.7.1",
    "typer>=0.12.3",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[project.scripts]
purchase-prep = "purchase_prep_assistant.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
